@@ -2,7 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=2
+EAPI=4
 
 inherit eutils git-2
 
@@ -41,8 +41,7 @@ IUSE_DRACUT_MODULES="${COMMON_MODULES} ${DM_MODULES} ${NETWORK_MODULES}"
 IUSE="debug selinux ${IUSE_DRACUT_MODULES}"
 RESTRICT="test"
 
-NETWORK_DEPS="net-misc/bridge-utils >=net-misc/dhcp-4.2.1-r1 sys-apps/iproute2
-	net-misc/ifenslave"
+NETWORK_DEPS=">=net-misc/dhcp-4.2.1-r1 sys-apps/iproute2"
 DM_DEPS="|| ( sys-fs/device-mapper >=sys-fs/lvm2-2.02.33 )"
 
 RDEPEND="
@@ -52,7 +51,7 @@ RDEPEND="
 	>=sys-apps/module-init-tools-3.8
 	>=sys-apps/sysvinit-2.87-r3
 	>=sys-apps/util-linux-2.16
-	>=sys-fs/udev-168
+	>=sys-fs/udev-164
 
 	debug? ( dev-util/strace )
 	selinux? ( sys-libs/libselinux sys-libs/libsepol )
@@ -62,7 +61,7 @@ RDEPEND="
 	dracut_modules_crypt? ( sys-fs/cryptsetup ${DM_DEPS} )
 	dracut_modules_crypt-gpg? ( app-crypt/gnupg )
 	dracut_modules_dmraid? ( sys-fs/dmraid sys-fs/multipath-tools ${DM_DEPS} )
-	dracut_modules_dmsquash-live? ( virtual/eject ${DM_DEPS} )
+	dracut_modules_dmsquash-live? ( ${DM_DEPS} )
 	dracut_modules_gensplash? ( media-gfx/splashutils )
 	dracut_modules_iscsi? ( >=sys-block/open-iscsi-2.0.871.3 ${NETWORK_DEPS} )
 	dracut_modules_lvm? ( >=sys-fs/lvm2-2.02.33 )
@@ -134,18 +133,18 @@ src_prepare() {
 }
 
 src_compile() {
-	emake WITH_SWITCH_ROOT=0 || die "emake failed"
+	emake WITH_SWITCH_ROOT=0
 }
 
 src_install() {
 	emake WITH_SWITCH_ROOT=0 \
 		prefix=/usr sysconfdir=/etc DESTDIR="${D}" \
-		install || die "emake install failed"
+		install
 
 	local gen2conf
 
 	dodir /var/lib/dracut/overlay
-	dodoc HACKING TODO AUTHORS NEWS README* || die 'dodoc failed'
+	dodoc HACKING TODO AUTHORS NEWS README*
 
 	case "$(base_sys_maj_ver)" in
 		1) gen2conf=gentoo.conf ;;
@@ -154,11 +153,10 @@ src_install() {
 	esac
 
 	insinto /etc/dracut.conf.d
-	newins dracut.conf.d/${gen2conf}.example ${gen2conf} \
-		|| die 'gen2conf ins failed'
+	newins dracut.conf.d/${gen2conf}.example ${gen2conf}
 
 	insinto /etc/logrotate.d
-	newins dracut.logrotate dracut || die 'dracut.logrotate ins failed'
+	newins dracut.logrotate dracut
 
 	#
 	# Modules
@@ -186,14 +184,12 @@ src_install() {
 	rm_module 95dasd 95dasd_mod 95zfcp 95znet
 
 	# Remove modules which won't work for sure
-	rm_module 00bootchart 05busybox # broken
 	rm_module 95fcoe # no tools
-
 	# fips module depends on masked app-crypt/hmaccalc
 	rm_module 01fips
 
-	# Not yet checked
-	rm_module 97masterkey 98ecryptfs 98integrity
+	# Remove extra modules which go to future dracut-extras
+	rm_module 00bootchart 05busybox 97masterkey 98ecryptfs 98integrity
 }
 
 pkg_postinst() {
@@ -215,4 +211,7 @@ pkg_postinst() {
 	elog 'Options (documented in dracut.kernel(7)) have new format since'
 	elog 'version 008. Old format is preserved, but will be removed in future.'
 	elog 'Please migrate to the new one.'
+	echo
+	elog 'Some dependencies were removed, because they are optional. dracut'
+	elog "will inform you with a warning when you're lacking something optional."
 }
