@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Sep 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
+  Synced with sys-kernel/dracut-013 in Portage tree.
+
   10 Aug 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
   Updated to changes after 011 release:
   - adding/removing modules
